--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     volumes:
       - ./frontend:/app       
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     ports:
       - "8080:8080"
     depends_on:
